# me780_panda_controllers

./: .gitignore  README.md  me780_panda_controllers.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
assets/models/custom/: panda_arm.urdf  panda_torque.xml
assets/models/franka_emika_panda/: scene_torque.xml
ros_ws/src/panda_controller/: package.xml  setup.cfg  setup.py
ros_ws/src/panda_controller/launch/: impedence.launch.py
ros_ws/src/panda_controller/panda_controller/: impedence_controller.py  pd_controller.py  simple_trajectory.py
ros_ws/src/panda_mujoco_bridge/: package.xml  requirements.txt  setup.cfg  setup.py
ros_ws/src/panda_mujoco_bridge/panda_mujoco_bridge/: mujoco_bridge.py
scripts/: generate_urdf.sh  test_panda_pd_controller.py  test_panda_pinocchio.py  test_panda_sim.py  torque_control_xml.py
scripts/panda_ik/: CMakeLists.txt  pybind_wrapper.cpp
